# urge

./: .gitignore  .gitmodules  AGENTS.md  ATTRIBUTION.md  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  GAMEPAD_SUPPORT.md  INTEGRATION.md  LICENCE.txt  LINUX_DEBUG_REPORT.md  README.md  README_EN.md  REVIEW.md  ROADMAP.md  Readme.md  SCALING_IMPLEMENTATION.md  SPONSOR  SQUASH_RECOVERY_AUDIT.md  anime4k_mode_a.md  anime4k_upscale_denoise_plan.md  build_and_deploy.sh  build_notes.md  cunny_port.md  cunny_udl_pso_lazy_loading_plan.md
app/: CMakeLists.txt  urge-helper.js  urge_index.html  urge_main.cc
app/android/: build.gradle
app/resources/: app.rc  resource.h
app/test/: vinegar.webm
binding/mri/: CMakeLists.txt  bindgen.py  binding_patch.cc  binding_patch.h  cmake_extract_builtin_offset.cmake  input_binding_patch.cc  input_binding_patch.h  mri_file.cc  mri_file.h  mri_main.cc  mri_main.h  mri_util.cc  mri_util.h  urge_binding.cc  urge_binding.h
binding/mri/zlib/: zlib.c
binding/unittests/: CMakeLists.txt  engine_binding_unittests.cc  engine_binding_unittests.h
components/audioservice/: CMakeLists.txt  audio_service.cc  audio_service.h  audio_stream.cc  audio_stream.h  midi_player.cc  midi_player.h  midi_stream_source.cc  midi_stream_source.h  sound_emit.cc  sound_emit.h
components/cubism/: CMakeLists.txt  cubism_model_manager.cc  cubism_model_manager.h  cubism_user_model_extend.cc  cubism_user_model_extend.h
components/filesystem/: CMakeLists.txt  io.cc  io.h  io_service.cc  io_service.h
components/network/: CMakeLists.txt  network_service.cc  network_service.h  network_service_impl.cc  network_service_impl.h  tcp_socket_impl.cc  tcp_socket_impl.h  udp_socket_impl.cc  udp_socket_impl.h  websocket_client_impl.cc  websocket_client_impl.h
components/spine/: CMakeLists.txt  spine_renderer.cc  spine_renderer.h
components/spine2d/: CMakeLists.txt  skeleton_renderer.cc  skeleton_renderer.h
content/: CMakeLists.txt  content_config.h
content/canvas/: animation_impl.cc  animation_impl.h  canvas_impl.cc  canvas_impl.h  canvas_scheduler.cc  canvas_scheduler.h  font_context.cc  font_context.h  font_impl.cc  font_impl.h  image_utils.h  palette_impl.cc  palette_impl.h  surface_impl.cc  surface_impl.h
content/common/: color_impl.cc  color_impl.h  rect_impl.cc  rect_impl.h  table_impl.cc  table_impl.h  tone_impl.cc  tone_impl.h  value_observer.h
content/components/: animation_impl.cc  animation_impl.h  display_impl.cc  display_impl.h  disposable.cc  disposable.h  font_context.cc  font_context.h  iostream_impl.cc  iostream_impl.h  misc_system.cc  misc_system.h  sprite_batch.cc  sprite_batch.h  tilequad.cc  tilequad.h
content/composite/: tilequad.cc  tilequad.h
content/context/: disposable.cc  disposable.h  engine_object.h  exception_state.cc  exception_state.h  execution_context.cc  execution_context.h
content/gpu/: buffer_impl.cc  buffer_impl.h  command_list_impl.cc  command_list_impl.h  command_queue_impl.cc  command_queue_impl.h  device_context_impl.cc  device_context_impl.h  fence_impl.cc  fence_impl.h  pipeline_signature_impl.cc  pipeline_signature_impl.h  pipeline_state_impl.cc  pipeline_state_impl.h  query_impl.cc  query_impl.h  render_device_impl.cc  render_device_impl.h  resource_binding_impl.cc  resource_binding_impl.h  resource_mapping_impl.cc  resource_mapping_impl.h  resource_variable_impl.cc  resource_variable_impl.h  sampler_impl.cc  sampler_impl.h  shader_impl.cc  shader_impl.h  texture_impl.cc  texture_impl.h
content/input/: key_event.cc  key_event.h  keyboard_controller.cc  keyboard_controller.h  mouse_controller.cc  mouse_controller.h  mouse_event.cc  mouse_event.h  text_input.cc  text_input.h  touch_event.cc  touch_event.h
content/io/: iostream_impl.cc  iostream_impl.h
content/media/: audio_impl.cc  audio_impl.h  audio_stream_impl.cc  audio_stream_impl.h  videodecoder_impl.cc  videodecoder_impl.h
content/misc/: misc_system.cc  misc_system.h
content/net/: fetch_impl.cc  fetch_impl.h  httprequest_impl.cc  httprequest_impl.h  network_context.cc  network_context.h  websocket_impl.cc  websocket_impl.h
content/network/: httprequest_impl.cc  httprequest_impl.h  websocket_impl.cc  websocket_impl.h
content/platform/: engine_impl.cc  engine_impl.h
content/profile/: command_ids.h  content_profile.cc  content_profile.h  i18n_profile.cc  i18n_profile.h
content/public/: engine_audio.h  engine_audiostream.h  engine_bitmap.h  engine_color.h  engine_cubismsprite.h  engine_display.h  engine_drawable.h  engine_fetch.h  engine_font.h  engine_gpu.h  engine_gpublendstate.h  engine_gpubox.h  engine_gpubuffer.h  engine_gpubufferview.h  engine_gpucommandlist.h  engine_gpucommandqueue.h  engine_gpudevicecontext.h  engine_gpufence.h  engine_gpuimmutablesampler.h  engine_gpulayoutelement.h  engine_gpupipelineresource.h  engine_gpupipelinesignature.h  engine_gpupipelinestate.h  engine_gpuquery.h  engine_gpurenderdevice.h  engine_gpuresourcebinding.h  engine_gpuresourcemapping.h  engine_gpuresourcevariable.h  engine_gpusampler.h  engine_gpushader.h  engine_gputexture.h  engine_gputexturesubresdata.h  engine_gputextureview.h  engine_gpuviewport.h  engine_graphics.h  engine_httprequest.h  engine_imageanimation.h  engine_input.h  engine_inputevent.h  engine_iostream.h  (+27 more)
content/render/: cubismsprite_impl.cc  cubismsprite_impl.h  drawable_controller.cc  drawable_controller.h  drawable_impl.cc  drawable_impl.h  mesh2d_impl.cc  mesh2d_impl.h  mesh_impl.cc  mesh_impl.h  pipeline_collection.cc  pipeline_collection.h  plane_impl.cc  plane_impl.h  spinesprite_impl.cc  spinesprite_impl.h  sprite_batch.cc  sprite_batch.h  sprite_impl.cc  sprite_impl.h  tilemap2_impl.cc  tilemap2_impl.h  tilemap_impl.cc  tilemap_impl.h  tilequad.cc  tilequad.h  videodecoder_impl.cc  videodecoder_impl.h  window2_impl.cc  window2_impl.h  window_impl.cc  window_impl.h
content/screen/: display_impl.cc  display_impl.h  renderscreen_impl.cc  renderscreen_impl.h  viewport_impl.cc  viewport_impl.h
content/utility/: engine_impl.cc  engine_impl.h
renderer/: CMakeLists.txt  renderer_config.h
(+156 files in other folders)
